add all files